@@ -1,3 +1,9 @@
+2020-02-26 Wiley E. Hill <wileyhill@gmail.com>
+
+    * include/geda_gtk_compat.h: Add macro:
+
+          * geda_get_misc_yalign
+
 2020-02-25 Wiley E. Hill <wileyhill@gmail.com>
 
     * include/geda_gtk_compat.h: Add macros:
